# lolasengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: CNAME  index.html
engine/: CMakeLists.txt  callback.c  file.c  garbagecollector.c  input.c  internal.h  internal_methods.h  list.c  log.c  memory.c  shader.c  window.c
engine/data/: arraylist.c  color.c  dllist.c
engine/include/lolasengine/: engine.h
engine/render/: camera.c  scene.c  shader.c  window.c
engine/util/: default.c  file.c  fileutil.c  input.c  log.c  time.c  timeutil.c
src/: CMakeLists.txt  engine.c  engine.h  game.c
src/engine/: CMakeLists.txt  window.c  window.h
